# docs/swagger.json
@@ -167,11 +167,62 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.EnvelopeGetAllJobPostsResponse"
+                            "$ref": "#/definitions/dto.EnvelopeGetJobPostsResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/jobPost/getJobPostByID/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "JobPost"
+                ],
+                "summary": "Get a job post by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Job post ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.EnvelopeGetJobPostsResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -513,20 +564,6 @@
                 }
             }
         },
-        "dto.EnvelopeGetAllJobPostsResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.GetAllJobPostsResponse"
-                    }
-                },
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.EnvelopeGetAllUsersResponse": {
             "type": "object",
             "properties": {
@@ -534,6 +571,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/dto.GetAllUsers"
+                    }
+                },
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.EnvelopeGetJobPostsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.GetJobPostsResponse"
                     }
                 },
                 "error": {
@@ -575,9 +626,38 @@
                 }
             }
         },
-        "dto.GetAllJobPostsResponse": {
+        "dto.GetAllUsers": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "user_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.GetJobPostsResponse": {
+            "type": "object",
+            "properties": {
+                "applicant_count": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
                 "deadline": {
                     "type": "string"
                 },
@@ -602,30 +682,10 @@
                 "title": {
                     "type": "string"
                 },
+                "updated_at": {
+                    "type": "string"
+                },
                 "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.GetAllUsers": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "user_type": {
                     "type": "string"
                 }
             }
@@ -720,6 +780,12 @@
         "dto.UpdateJobPostResponse": {
             "type": "object",
             "properties": {
+                "applicant_count": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
                 "deadline": {
                     "type": "string"
                 },
@@ -742,6 +808,9 @@
                     }
                 },
                 "title": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "user_id": {
